metrics/uptime/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      name: uptime
  template:
    metadata:
      labels:
        name: uptime
    spec:

      containers:
        - name: uptime
          image: uptime-kuma

          ports:
            - name: http
              containerPort: 3001
              protocol: TCP

          volumeMounts:
            - name: data
              mountPath: /data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-uptime
