metrics/uptime/deployment/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`boron.<path:core:paths#domain>`)
      kind: Rule
      services:
        - name: uptime
          port: 3001
